--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
+    "motion": "^12.16.0",
     "nanoid": "^5.1.5",
     "nodemailer": "^7.0.3",
     "react": "^19.1.0",
