--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
-DB_CONNECTION="mongodb+srv://Alevice:Zatmenie7378@alevice-claster.wzkehzs.mongodb.net/?retryWrites=true&w=majority&appName=Alevice-Claster"
-EMAIL_USER="vlad113chepurko@gmail.com"
-EMAIL_PASSWORD="sddl ccql jkqr chsu"
+DB_CONNECTION=mongodb+srv://Alevice:Zatmenie7378@alevice-claster.wzkehzs.mongodb.net/?retryWrites=true&w=majority&appName=Alevice-Claster
+
+EMAIL_HOST=eco-olive-trees.com
+EMAIL_PORT=465
+EMAIL=info@eco-olive-trees.com
+EMAIL_PASS=htR41Pn8
