Added new e-mail and password

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
 DB_CONNECTION=mongodb+srv://Alevice:Zatmenie7378@alevice-claster.wzkehzs.mongodb.net/?retryWrites=true&w=majority&appName=Alevice-Claster
 
-EMAIL_HOST=eco-olive-trees.com
+EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
-EMAIL=info@eco-olive-trees.com
-EMAIL_PASS=htR41Pn8
+EMAIL=info@familyoliveclub.com
+EMAIL_PASS=cbtd tlby sypx jtoz
+
+
