Updated project architecture, added hash

--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,7 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
 EMAIL=info@familyoliveclub.com
 EMAIL_PASS=cbtd tlby sypx jtoz
+ADMIN_LOG=admin
+ADMIN_HASH=$2b$10$6dtdD9RV2izoAviGaK2HHea6YTdCsB/C9a2mTSZT87kLqTrD8ZJ5u
 
 
