--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "motion": "^12.16.0",
     "nanoid": "^5.1.5",
     "nodemailer": "^7.0.3",
+    "pdfkit": "^0.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.2",
