--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.2",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.8",
     "zustand": "^5.0.5"
